# call_center

./: .env.example  .gitignore  Comprehensive_Nexus_Dispatch_Documentation.docx  Comprehensive_Nexus_Dispatch_Documentation.md  Nexus_Dispatch_Documentation.docx  Nexus_Dispatch_Documentation.md  docker-compose.prod.yml  docker-compose.yml
nexus_agent/: Dockerfile  agent.py  entrypoint.py  pyproject.toml
nexus_agent/config/: logging_config.py  settings.py  tenant.py  tenants.json
nexus_agent/llm/: campaigns.py  factory.py  google_client.py  groq_client.py  openai_client.py  prompts.py  sales_prompts.py
nexus_agent/pipeline/: analytics.py  hooks.py  telemetry.py  verifier.py
nexus_agent/rag/: __init__.py  cache.py  chunker.py  embeddings.py  index.py  ingest.py
nexus_agent/rag/corpus/lumenia/: 01-company-overview.md  02-about-lumenia.md  03-contact-and-engagement.md  04-delivery-process.md  05-testimonials.md  06-services-overview.md  07-solution-saas-development.md  08-solution-ecommerce.md  09-solution-accounting-firms.md  10-solution-mobile-app-development.md  11-solution-chatbot-development.md  12-solution-digital-marketing.md  13-solution-seo-services.md  14-projects-index.md  15-project-saas-trucking-dispatch.md  16-project-medaan.md  23-legal-terms.md  (+8 more)
nexus_agent/state/: __init__.py  agents.py  machine.py  sales_agents.py
nexus_agent/stt/: deepgram_stt.py
nexus_agent/telephony/: __init__.py  outbound.py  sip_config.py
nexus_agent/tests/: test_llm_factory.py  test_rag.py  test_sales_agents.py  test_speech_scrub.py  test_state_machine.py  test_tenant_config.py  test_verifier.py  test_verifier_sales.py
nexus_agent/tools/: booking_tools.py  call_control.py  call_reporter.py  check_call_tools.py  detention_tools.py  document_tools.py  human_intervention.py  kb_tools.py  onboarding_tools.py  registry.py  service_http.py  tms_tools.py
nexus_agent/tts/: deepgram_tts.py  eleven_v3.py  expressive_opener.py  registry.py
nexus_agent/vad/: silero_vad.py
tms_backend/: Dockerfile  auth.py  database.py  main.py  pyproject.toml
tms_backend/alembic/: env.py
tms_backend/alembic/versions/: 28ffbf91a866_initial_schema.py  b73d31748668_add_users_table.py  c1a2b3c4d5e6_add_call_transcript_direction.py
tms_backend/data/: drivers.json  loads.json  rates.json
tms_backend/models/: booking.py  driver.py  load.py  rate.py
tms_backend/routers/: analytics_router.py  auth_router.py  bookings.py  calls.py  demo.py  detentions.py  documents.py  drivers.py  loads.py  rates.py  tenants.py  websocket.py
tms_backend/services/: concurrency_limiter.py  email.py  livekit_control.py
tms_backend/tests/: test_endpoints.py
(+39 files in other folders)
