[project]
name = "nexus-agent"
version = "0.1.0"
description = "Bare-Metal Voice AI Agent Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents~=1.0",
    "livekit-plugins-deepgram~=1.0",
    "livekit-plugins-silero~=1.0",
    "livekit-plugins-openai~=1.0",
    "openai>=1.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
