[project]
name = "nexus-agent"
version = "0.1.0"
description = "Bare-Metal Voice AI Agent Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.6",
    "livekit-plugins-deepgram>=1.6",
    "livekit-plugins-silero>=1.6",
    "livekit-plugins-openai>=1.0",
    "livekit-plugins-google>=0.1",
    "livekit-plugins-cartesia>=1.6",
    "livekit-plugins-elevenlabs>=1.6",
    "livekit-plugins-turn-detector>=1.0",
    "openai>=1.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "redis[hiredis]>=5.0",
    # Retrieval. fastembed runs the embedding model locally on CPU via ONNX so
    # that retrieval costs no network round-trip on the conversational hot path;
    # numpy backs the in-process vector index.
    "fastembed>=0.4",
    "numpy>=1.26",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
